[tool.poetry]
name = "fix_scheduler_hints"
version = "0.1.0"
description = ""
authors = ["Alex Elshamouty <aelshamouty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyMySQL = "^1.0.2"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
